# task-api

./: .env-example  .gitignore  CHANGELOG.md  Makefile  README.md  git-setup.sh  pyproject.toml  requirements.txt
app/: main.py
app/controllers/: task_controller.py
app/core/: config.py  database.py
app/models/: task.py
app/repositories/: task_repository.py
app/schemas/: task.py
app/services/: task_service.py
docs/: architecture.mmd  backlog.md
tests/unit/: test_task_service.py
